add finished filter, change the home,aboutm and contact pages, and add some other stuff

--- a/cis237Assignment6/Views/Home/Contact.cshtml
+++ b/cis237Assignment6/Views/Home/Contact.cshtml
@@ -5,13 +5,18 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Kalamazoo Valley Community College<br />
+    230 North Rose Street<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    269-488-4400
 </address>
 
+
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">jwaller8642@mail.kvcc.edu</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+<body>
+    <center><img src="http://cdn.stateuniversity.com/assets/logos/images/4318/large_kvcc-welcome.jpg" /></center>
+</body>
