--- a/cis237Assignment6/Views/Home/Index.cshtml
+++ b/cis237Assignment6/Views/Home/Index.cshtml
@@ -2,30 +2,23 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+
+
+<body background="http://insightmine.com/content/images/2015/04/Wine.jpg">
+    <br /><br />
+    <h1>Breif History of Wine</h1>
+
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            The earliest archaeological evidence of wine production yet found has been at sites in Georgia (c. 6000 BC),[1][2][3] Iran (c. 5000 BC), Greece (c. 4500 BC) and Armenia (c. 4100 BC),[4][5][6][7][8] where the oldest winery to date was uncovered.
+
+            The altered consciousness produced by wine has been considered religious since its origin. The Greeks worshiped Dionysus and Bacchus and the Romans carried on his cult.[9] Consumption of ritual wine was part of Jewish practice since Biblical times and, as part of the eucharist commemorating Jesus's Last Supper, became even more essential to the Christian Church. Although Islam nominally forbade the production or consumption of wine, during its Golden Age, alchemists such as Geber pioneered wine's distillation for medicinal and industrial purposes such as the production of perfume.[10] The Turkic Uyghurs were even responsible for reïntroducing viticulture to China from the Tang dynasty onwards.
+
+            Wine production and consumption increased, burgeoning from the 15th century onwards as part of European expansion. Despite the devastating 1887 phylloxera louse infestation, modern science and technology adapted and industrial wine production and wine consumption now occur throughout the world.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    <center>
+        <img src="http://wineclublist.com/wp-content/uploads/2015/04/history_of_wine.jpg" width="500" height="300" /> <br />
+        <a href="https://en.wikipedia.org/wiki/History_of_wine">Histroy of wine</a>
+    </center>
+
+</body>
