--- a/cis237Assignment6/Views/Beverage/Index.cshtml
+++ b/cis237Assignment6/Views/Beverage/Index.cshtml
@@ -6,25 +6,31 @@
 
 <h2>Index</h2>
 
-<div class =" form-group">
+<div class=" form-group">
     <fieldset>
         <legend>Search Filter</legend>
         @{
             using (Html.BeginForm("Filter", "Beverage", FormMethod.Post, new { @class = "form-inline" }))
             {
+                
                 @Html.AntiForgeryToken()
-            <label for="Id">Id</label>
-            @Html.TextBox("id");
-             <label for="name">Name</label>
-            @Html.TextBox("name");
-             <label for="pack">Pack</label>
-            @Html.TextBox("pack");
-            <br/>
-            <input type="submit" value="Filter" class="btn btn-info pull-right"/>  
+            
+                <label for="name">Name</label>
+                @Html.TextBox("name", (string)ViewBag.filterName);
+                <label for="min">Minimum Price</label>
+                @Html.TextBox("min", (string)ViewBag.filterMin);
+            <label for="max">Maximum Price</label>
+            @Html.TextBox("max", (string)ViewBag.filterMax);
+
+            <br />
+            <input type="submit" value="Filter" class="btn btn-info pull-left" />
+         
             }
-        }
+}
     </fieldset>
 </div>
+
+
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -46,26 +52,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.pack)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.active)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.pack)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.active)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.id })
+            </td>
+        </tr>
+    }
 
 </table>
