--- a/cis237Assignment6/Views/Beverage/Index.cshtml
+++ b/cis237Assignment6/Views/Beverage/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Index</h2>
-
+<!--Add text box and button for filter-->
 <div class=" form-group">
     <fieldset>
         <legend>Search Filter</legend>
