--- a/cis237Assignment6/Views/Home/Contact.cshtml
+++ b/cis237Assignment6/Views/Home/Contact.cshtml
@@ -3,7 +3,7 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-
+<!--Justt Added my info and a picture of the school-->
 <address>
     Kalamazoo Valley Community College<br />
     230 North Rose Street<br />
