--- a/cis237Assignment6/Views/Home/Index.cshtml
+++ b/cis237Assignment6/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-
+<!--Home page just added some wine history and added a link to wheewre i got it from, and a picture-->
 
 <body background="http://insightmine.com/content/images/2015/04/Wine.jpg">
     <br /><br />
